--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^10.1.2",
+    "@angular-devkit/schematics": "^10.1.2",
     "@angular/animations": "~10.1.2",
     "@angular/common": "~10.1.2",
     "@angular/compiler": "~10.1.2",
     "@angular/core": "~10.1.2",
+    "@angular/elements": "^10.1.2",
     "@angular/forms": "~10.1.2",
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "@schematics/angular": "^10.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
